--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,13 +1,13 @@
-$bg: #403f4d;
-$green: #62dca5;
-$yellow: #f7f879;
-$red: #e1675a;
+$bg: #745f73;
+$green: #38e899;
+$yellow: #ffff0e;
+$red: #d22d1b;
 
-$input-color: #2e2d33;
-$item-color: #4e4d5c;
-$font-color: #fbfafb;
+$input-color: #000000;
+$item-color: #373460;
+$font-color: #ffffff;
 
-$big-font-size: 64px;
+$big-font-size: 40px;
 $heading-font-size: 24px;
 $item-font-size: 20px;
 
